--- a/Hattmakaren-grupp4.csproj
+++ b/Hattmakaren-grupp4.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MD5" Version="2.0.5" />
     <PackageReference Include="MongoDB.Entities" Version="23.1.0" />
   </ItemGroup>
 
