--- a/Hattmakaren-grupp4.csproj
+++ b/Hattmakaren-grupp4.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MD5" Version="2.0.5" />
     <PackageReference Include="MongoDB.Entities" Version="23.1.0" />
+    <PackageReference Include="PDFsharp" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
